[package]
name = "decay-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "decay_server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
env_logger = "0.9"
log = "0.4"
dotenv = "0.15"
axum = { version = "0.7", features = ["ws", "macros"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "set-header", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.5"
mime = "0.3"